<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAcc"
        android:layout_alignRight="@+id/btnAcc"
        android:layout_below="@+id/btnAcc"        
        android:text="@string/Talk"
        android:textColor="@color/buttons" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSearch"
        android:layout_alignRight="@+id/btnSearch"
        android:layout_below="@+id/btnSearch"
        android:text="@string/Map"
        android:textColor="@color/buttons" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMap"
        android:layout_alignRight="@+id/btnMap"
        android:layout_below="@+id/btnMap"
        android:text="@string/about"
        android:textColor="@color/buttons" />

    <Button
        android:id="@+id/btnAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMagnet"
        android:layout_centerHorizontal="true"
        android:text="@string/Movement"
        android:textColor="@color/buttons" />

    <Button
        android:id="@+id/btnMagnet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAcc"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnAcc"
        android:layout_marginTop="22dp"
        android:text="@string/Magnetic_Fields"
        android:textColor="@color/buttons" />

</RelativeLayout>