<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="95dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible" 
        android:background="@drawable/background">

        <TextView
            android:id="@+id/txtLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="@color/buttons" />

        <EditText
            android:id="@+id/edtLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/buttons" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="@color/buttons" />

        <EditText
            android:id="@+id/edtLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/buttons" />

        <TextView
            android:id="@+id/txtLocat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/buttons" />

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/buttons" />

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/buttons" />

        <EditText
            android:id="@+id/edtDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/buttons" />

        <Button
            android:id="@+id/btnAddDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailstomap"
            android:textColor="@color/buttons" />

    </LinearLayout>

	<fragment 
  		android:id="@+id/map"
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		class="com.google.android.gms.maps.MapFragment"/>
</LinearLayout>